Config websocket url secure
anderson

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,5 +3,5 @@
     <strong>Stats</strong><br>
     <div id="ping"></div>
 
-   <script type="text/javascript" charset="utf-8" src="@routes.Application.pingJs().webSocketURL(secure = true)"></script>
+   <script type="text/javascript" charset="utf-8" src="@routes.Application.pingJs()"></script>
 }
